--- a/Training.html
+++ b/Training.html
@@ -6,7 +6,6 @@
 <title>SUNDAY TRAINING SESSION TERM 4 - 2025</title>
 
 <style>
-/* --- General page setup --- */
 body {
   font-family: "Segoe UI", Roboto, sans-serif;
   background-color: #f9fafb;
@@ -17,14 +16,11 @@ body {
   justify-content: center;
 }
 
-/* --- Page wrapper --- */
 #page-wrapper {
   width: 100%;
-  max-width: 30%;
-  min-width: 320px;
+  max-width: 900px;
 }
 
-/* --- Header --- */
 header {
   display: flex;
   align-items: center;
@@ -32,17 +28,19 @@ header {
   gap: 12px;
   margin-bottom: 24px;
 }
+
 header img {
   height: 60px;
+  width: auto; /* Maintain aspect ratio */
   border-radius: 50%;
 }
+
 header h1 {
   font-size: 1.8em;
   margin: 0;
   color: #1a365d;
 }
 
-/* --- Controls --- */
 .controls {
   display: flex;
   justify-content: center;
@@ -50,27 +48,20 @@ header h1 {
   flex-wrap: wrap;
   margin-bottom: 12px;
 }
+
 .controls input, .controls select, .controls button {
   padding: 6px 10px;
   border: 1px solid #cbd5e0;
   border-radius: 6px;
   font-size: 0.95em;
 }
-.controls input:focus, .controls select:focus {
-  outline: none;
-  border-color: #2b6cb0;
-  box-shadow: 0 0 4px rgba(43,108,176,0.3);
-}
+
 .controls button {
   background-color: #2b6cb0;
   color: white;
   cursor: pointer;
 }
-.controls button:hover {
-  background-color: #1e4e8c;
-}
 
-/* --- Group containers --- */
 section {
   margin-bottom: 1rem;
   border-radius: 0.75rem;
@@ -78,6 +69,7 @@ section {
   box-shadow: 0 1px 4px rgba(0,0,0,0.1);
   overflow: hidden;
 }
+
 .group-header {
   font-weight: 600;
   font-size: 1.1rem;
@@ -87,24 +79,20 @@ section {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  cursor: pointer;
 }
+
 .group-content {
   padding: 0;
   overflow-x: auto;
-  transition: all 0.3s ease;
-}
-.group-content.hidden {
-  display: none;
 }
 
-/* --- Table --- */
 table {
   width: 100%;
   border-collapse: collapse;
   font-size: 0.9rem;
   table-layout: fixed;
 }
+
 thead th {
   background: #f3f4f6;
   position: sticky;
@@ -113,82 +101,48 @@ thead th {
   padding: 0.5rem;
   text-align: left;
 }
+
 tbody td {
   border-top: 1px solid #e5e7eb;
   padding: 0.4rem 0.5rem;
   word-wrap: break-word;
-}
-tbody tr:hover {
-  background: #f9fafb;
-}
-
-/* --- Responsive --- */
-@media (max-width: 768px) {
-  #page-wrapper { max-width: 100%; }
-  table, thead, tbody, th, td, tr { display: block; }
-  thead { display: none; }
-  tr { margin-bottom: 12px; border-bottom: 1px solid #ddd; }
-  td {
-    display: flex;
-    justify-content: space-between;
-    padding: 8px;
-  }
-  td::before {
-    content: attr(data-label);
-    font-weight: 600;
-    color: #2b6cb0;
-  }
 }
 </style>
 </head>
 
 <body>
 <div id="page-wrapper">
-<header>
-  <a href="https://www.poriruaheatbasketball.org" target="_blank">
-    <img src="images/logo.png" alt="Porirua Heat Logo">
-  </a>
-  <h1>CLUB REGISTRATIONS 2025 - TERM 4</h1>
-</header>
+  <header>
+    <a href="https://www.poriruaheatbasketball.org" target="_blank">
+      <img src="images/logo.png" alt="Porirua Heat Logo">
+    </a>
+    <h1>SUNDAY TRAINING SESSION TERM 4 - 2025</h1>
+  </header>
 
-<div class="controls">
-  <input id="search" type="text" placeholder="Search...">
-  <select id="selectionFilter">
-    <option value="">All Teams</option>
-  </select>
-  <button id="export">Export CSV</button>
-  <button id="toggleGroups">Collapse All</button>
-  <button id="pdfBtn">Generate PDF</button>
+  <div class="controls">
+    <input id="search" type="text" placeholder="Search...">
+    <select id="selectionFilter"><option value="">All Groups</option></select>
+    <button id="pdfBtn">Generate PDF</button>
+  </div>
+
+  <div id="table-container"></div>
 </div>
 
-<div style="margin-top: 6px;">
-  <a href="https://limonza.github.io/te-tai-hou-teams-2025" style="font-size: 1em; color: #2b6cb0; text-decoration: underline;">
-    Te Tai Hou Teams
-  </a>
-</div>
-
-<div id="table-container"></div>
-</div>
-
-<!-- jsPDF + AutoTable -->
+<!-- Libraries -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.8.3/jspdf.plugin.autotable.min.js"></script>
 
 <script>
 const search = document.getElementById('search');
 const selectionFilter = document.getElementById('selectionFilter');
 const container = document.getElementById('table-container');
-const exportBtn = document.getElementById('export');
-const toggleGroupsBtn = document.getElementById('toggleGroups');
-const pdfBtn = document.getElementById('pdfBtn');
-
 let headers = [];
 let allRows = [];
-let groupIndex = 1;
-let nameIndex = 0;
-const customGroupOrder = ["Group1", "Group2", "Group3", "Group4"];
+const groupIndex = 1;  // Group column index
+const nameIndex = 0;   // Name column index
+const customGroupOrder = []; // Optionally define fixed order if desired
 
-// --- Load CSV ---
+// === Load CSV and Render ===
 fetch('Sunday.csv')
   .then(res => res.text())
   .then(text => {
@@ -199,10 +153,10 @@ fetch('Sunday.csv')
     renderGroups(allRows);
   });
 
+// === Populate Dropdown ===
 function populateDropdown() {
   const unique = [...new Set(allRows.map(r => r[groupIndex]))];
-  const ordered = customGroupOrder.concat(unique.filter(v => !customGroupOrder.includes(v)));
-  ordered.forEach(v => {
+  unique.forEach(v => {
     const opt = document.createElement('option');
     opt.value = v;
     opt.textContent = v;
@@ -210,6 +164,7 @@ function populateDropdown() {
   });
 }
 
+// === Render Grouped Tables ===
 function renderGroups(rows) {
   container.innerHTML = '';
   const groups = rows.reduce((acc, row) => {
@@ -220,18 +175,18 @@ function renderGroups(rows) {
   }, {});
 
   const filterVal = selectionFilter.value;
-  const visibleKeys = filterVal
-    ? [filterVal]
-    : [...customGroupOrder.filter(g => groups[g]), ...Object.keys(groups).filter(k => !customGroupOrder.includes(k)).sort()];
+  const keys = filterVal ? [filterVal] : Object.keys(groups).sort();
 
-  visibleKeys.forEach(groupName => {
+  keys.forEach(groupName => {
     const groupRows = groups[groupName];
     if (!groupRows) return;
+
+    groupRows.sort((a,b) => a[nameIndex].localeCompare(b[nameIndex]));
 
     const section = document.createElement('section');
     const header = document.createElement('div');
     header.className = 'group-header';
-    header.innerHTML = `<span>${groupName}</span><span>(${groupRows.length}) ▼</span>`;
+    header.innerHTML = `<span>${groupName}</span><span>${groupRows.length} Records</span>`;
     section.appendChild(header);
 
     const wrapper = document.createElement('div');
@@ -239,33 +194,46 @@ function renderGroups(rows) {
 
     const table = document.createElement('table');
     const thead = document.createElement('thead');
-    const trh = document.createElement('tr');
-    trh.innerHTML = `<th>#</th>${headers.map((h,i)=>i!==groupIndex?`<th>${h}</th>`:'').join('')}`;
-    thead.appendChild(trh);
+    const tr = document.createElement('tr');
+
+    const numTh = document.createElement('th');
+    numTh.textContent = '#';
+    tr.appendChild(numTh);
+
+    headers.forEach((h, i) => {
+      if (i !== groupIndex) {
+        const th = document.createElement('th');
+        th.textContent = h;
+        tr.appendChild(th);
+      }
+    });
+
+    thead.appendChild(tr);
     table.appendChild(thead);
 
     const tbody = document.createElement('tbody');
     groupRows.forEach((r, idx) => {
-      const tr = document.createElement('tr');
-      tr.innerHTML = `<td>${idx+1}</td>` + r.map((c,i)=>i!==groupIndex?`<td>${c}</td>`:'').join('');
-      tbody.appendChild(tr);
+      const rowTr = document.createElement('tr');
+      const numTd = document.createElement('td');
+      numTd.textContent = idx + 1;
+      rowTr.appendChild(numTd);
+      r.forEach((c, i) => {
+        if (i !== groupIndex) {
+          const td = document.createElement('td');
+          td.textContent = c;
+          rowTr.appendChild(td);
+        }
+      });
+      tbody.appendChild(rowTr);
     });
     table.appendChild(tbody);
     wrapper.appendChild(table);
     section.appendChild(wrapper);
     container.appendChild(section);
-
-    header.addEventListener('click', () => {
-      wrapper.classList.toggle('hidden');
-      const arrow = header.querySelector('span:last-child');
-      arrow.textContent = wrapper.classList.contains('hidden')
-        ? `(${groupRows.length}) ▲`
-        : `(${groupRows.length}) ▼`;
-    });
   });
 }
 
-// --- Filters ---
+// === Search and Filter ===
 function applyFilters() {
   const q = search.value.toLowerCase();
   const sel = selectionFilter.value;
@@ -279,62 +247,42 @@ function applyFilters() {
 search.addEventListener('input', applyFilters);
 selectionFilter.addEventListener('change', applyFilters);
 
-// --- CSV Export ---
-exportBtn.addEventListener('click', () => {
-  const rows = [];
-  const headersNoGroup = ['#', ...headers.filter((_,i)=>i!==groupIndex)];
-  rows.push(headersNoGroup.join(','));
-  container.querySelectorAll('section').forEach(section => {
-    const wrapper = section.querySelector('.group-content');
-    if(wrapper.classList.contains('hidden')) return;
-    wrapper.querySelectorAll('tbody tr').forEach(tr => {
-      const cells = Array.from(tr.children).map(td => td.textContent);
-      rows.push(cells.join(','));
-    });
-  });
-  const blob = new Blob([rows.join('\n')], {type:'text/csv;charset=utf-8;'});
-  const link = document.createElement('a');
-  link.href = URL.createObjectURL(blob);
-  link.download = 'filtered_data.csv';
-  link.click();
-});
-
-// --- PDF Generation ---
-pdfBtn.addEventListener('click', async () => {
+// === PDF Generation ===
+document.getElementById('pdfBtn').addEventListener('click', async () => {
   const { jsPDF } = window.jspdf;
   const doc = new jsPDF('p', 'pt', 'a4');
 
-  // === Load and get logo dimensions ===
   const logoUrl = 'images/logo.png';
-  let logoData = null, logoWidth = 0, logoHeight = 0;
+  let logoData = null, logoAspectRatio = 1;
+
   try {
-    const img = new Image();
-    img.src = logoUrl;
-    await img.decode();
-    const ratio = img.width / img.height;
-    logoHeight = 26; // fixed height
-    logoWidth = logoHeight * ratio; // proportional width
-    const canvas = document.createElement('canvas');
-    canvas.width = img.width;
-    canvas.height = img.height;
-    const ctx = canvas.getContext('2d');
-    ctx.drawImage(img, 0, 0);
-    logoData = canvas.toDataURL('image/png');
+    const response = await fetch(logoUrl);
+    const blob = await response.blob();
+    logoData = await new Promise((resolve) => {
+      const reader = new FileReader();
+      reader.onloadend = () => resolve(reader.result);
+      reader.readAsDataURL(blob);
+    });
+    await new Promise((resolve) => {
+      const img = new Image();
+      img.onload = function () {
+        logoAspectRatio = this.width / this.height;
+        resolve();
+      };
+      img.src = logoData;
+    });
   } catch (err) {
     console.warn("Logo not found or failed to load:", err);
   }
 
-  const pageTopMargin = 70;
-  const headerHeight = 26;
-  const headerGap = 20;
-  const leftMargin = 40;
-  const rightMargin = 40;
-
   const sections = Array.from(container.querySelectorAll('section'));
+  const pageWidth = doc.internal.pageSize.getWidth();
+  const pageHeight = doc.internal.pageSize.getHeight();
+  const leftMargin = 40, rightMargin = 40;
+  const headerHeight = 26, headerGap = 20, pageTopMargin = 70;
   let firstGroup = true;
 
-  function drawGradientHeader(doc, title, countText) {
-    const pageWidth = doc.internal.pageSize.getWidth();
+  function drawGradientHeader(title, countText) {
     const gradientSteps = 40;
     for (let i = 0; i < gradientSteps; i++) {
       const ratio = i / gradientSteps;
@@ -348,4 +296,61 @@ pdfBtn.addEventListener('click', async () => {
     }
 
     if (logoData) {
-      const logoY = pageTopMargin - headerHeight + 10 + (header
+      const logoMaxHeight = 24;
+      const logoWidth = logoMaxHeight * logoAspectRatio;
+      doc.addImage(logoData, 'PNG', leftMargin - 10, pageTopMargin - headerHeight + 12, logoWidth, logoMaxHeight);
+    }
+
+    doc.setFontSize(13);
+    doc.setFont('helvetica', 'bold');
+    doc.setTextColor(255, 255, 255);
+    const textY = pageTopMargin - headerHeight / 2 + 18;
+    doc.text(title, leftMargin + 60, textY);
+    const textWidth = doc.getTextWidth(countText);
+    doc.text(countText, pageWidth - rightMargin - textWidth, textY);
+  }
+
+  function drawFooter(pageNumber, totalPages) {
+    doc.setFontSize(9);
+    doc.setTextColor(0, 0, 0);
+    doc.text(`Page ${pageNumber} of ${totalPages}`, pageWidth / 2, pageHeight - 20, { align: 'center' });
+  }
+
+  for (const section of sections) {
+    const groupTitle = section.querySelector('.group-header span:first-child').textContent;
+    const groupCount = section.querySelector('.group-header span:last-child').textContent.trim();
+
+    const headers = Array.from(section.querySelectorAll('thead th')).map(th => th.textContent);
+    const body = Array.from(section.querySelectorAll('tbody tr')).map(tr =>
+      Array.from(tr.children).map(td => td.textContent)
+    );
+
+    if (!firstGroup) doc.addPage();
+    else firstGroup = false;
+
+    drawGradientHeader(groupTitle, groupCount);
+
+    doc.autoTable({
+      head: [headers],
+      body: body,
+      startY: pageTopMargin + headerHeight + headerGap,
+      theme: 'grid',
+      headStyles: { fillColor: [239, 68, 68], halign: 'center', textColor: 255 },
+      styles: { fontSize: 9, cellPadding: 4 },
+      margin: { left: leftMargin, right: rightMargin },
+      showHead: 'everyPage',
+      columnStyles: { 0: { cellWidth: 30 } },
+      didDrawPage: function (data) {
+        drawGradientHeader(groupTitle, groupCount);
+        const totalPages = doc.internal.getNumberOfPages();
+        drawFooter(data.pageNumber, totalPages);
+      }
+    });
+  }
+
+  doc.save('TeTaiHouTeams.pdf');
+});
+</script>
+
+</body>
+</html>
